fixed alignment issues

--- a/parallax-template/css/style.css
+++ b/parallax-template/css/style.css
@@ -190,3 +190,11 @@ ul.browser-default li {
 .contact-form {
   max-width: 600px;
 }
+
+.testimonial-container {
+  max-width: 800px;
+}
+
+.resize-box {
+  position: relative !important;
+}
